--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
         <nav class="menu">
             <div class="menu-branding">
-                <div class="potrait"></div>
+                <div class="potret"></div>
             </div>
             <ul class="menu-nav">
-                <li class="nav-item">
+                <li class="nav-item current">
                     <a href="/" class="nav-link">
                         Home
                     </a>
@@ -38,7 +38,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="job.html" class="nav-link">
-                        Pengalaman Kerja
+                        Pengalaman
                     </a>
                 </li>
                 <li class="nav-item">
