--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="tentang.html" class="nav-link">
+                    <a href="public/tentang.html" class="nav-link">
                         Tentangku
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="job.html" class="nav-link">
+                    <a href="public/pengalaman.html" class="nav-link">
                         Pengalaman
                     </a>
                 </li>
