Kontak & Update Config

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="menu-nav">
                 <li class="nav-item current">
-                    <a href="/" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         Home
                     </a>
                 </li>
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="kontak.html" class="nav-link">
+                    <a href="/public/kontak.html" class="nav-link">
                         Kontak
                     </a>
                 </li>
