--- a/public/kontak.html
+++ b/public/kontak.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
 
-    <title>Pengalaman - Arnold Rozak</title>
+    <title>Kontak - Arnold Rozak</title>
 </head>
 
 <body>
@@ -36,12 +36,12 @@
                         Tentangku
                     </a>
                 </li>
-                <li class="nav-item current">
+                <li class="nav-item">
                     <a href="pengalaman.html" class="nav-link">
                         Pengalaman
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item current">
                     <a href="kontak.html" class="nav-link">
                         Kontak
                     </a>
@@ -50,47 +50,22 @@
         </nav>
     </header>
 
-    <main id="pengalaman">
+    <main id="kontak">
         <h1 class="lg-heading">
-            Pengalaman
-            <span class="text-dua">Kerja</span>
+            Kontak
+            <span class="text-dua">Saya</span>
         </h1>
         <h2 class="sm-heading">
-            Pengalaman Arnold Rozak ...
         </h2>
-        <div class="projek">
-            <div class="item">
-                <a href="#!">
-                    <img src="../assets/img/projek/projek-1-php.jpg" alt="Projek">
-                </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Projek
-                </a>
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github"></i> Github
-                </a>
+        <div class="hubungi">
+            <div>
+                <span class="text-dua">Handphone :</span> (+62) 878 8706 4380
             </div>
-            <div class="item">
-                <a href="#!">
-                    <img src="../assets/img/projek/projek-2-java.png" alt="Projek">
-                </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Projek
-                </a>
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github"></i> Github
-                </a>
+            <div>
+                <span class="text-dua">Email :</span> arnoldrozak@gmail.com
             </div>
-            <div class="item">
-                <a href="#!">
-                    <img src="../assets/img/gambar-latar.jpg" alt="Projek">
-                </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Projek
-                </a>
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github"></i> Github
-                </a>
+            <div>
+                <span class="text-dua">Alamat :</span> Jl. Panjang Kp.Baru, Jakarta Barat 11560
             </div>
         </div>
 
