--- a/public/tentang.html
+++ b/public/tentang.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="menu-nav">
                 <li class="nav-item">
-                    <a href="/" class="nav-link">
+                    <a href="../index.html" class="nav-link">
                         Home
                     </a>
                 </li>
@@ -52,14 +52,13 @@
 
     <main id="tentang">
         <h1 class="lg-heading">
-            Data
-            <span class="text-dua">Diri</span>
+            Ten<span class="text-dua">tang</span>
         </h1>
         <h2 class="sm-heading">
             Nama saya Arnold Rozak. Dan nama panggilan saya Arnold.
         </h2>
         <div class="info-tentang">
-            <img src="../assets/img/arnold.jpg" alt="Arnold Rozak" class="bio-img">
+            <img src="../assets/img/arnold-bio.jpg" alt="Arnold Rozak" class="bio-img">
 
             <div class="bio">
                 <h3 class="text-dua">BIO</h3>
